
- Added -entryForSystemGroupID for finding a contact group with the given
  system group ID

- Added feed method for finding feed entries of a single kind

- Updated DocsSample with more folder support

- Fetcher logging now uses xmllint to prettyprint XML for better readability
  in Safari
  
- Added setNamespaces: to GDataXMLNode

- Added new Docs query parameters and new category label constants

- Builds for iPhone and requiring 10.5 and higher now take advantage of
  fast enumeration

Bugs Fixed

- Moved some classes from common sources to Calendar folder

- Added methods to fetch individual calendar, photo, and spreadsheet entries

- Fixed query generation for URLs that already contain some parameters

- Fixed finance portfolio description method (thanks dujunfly)

- Renamed photos server and query classes, and changed photos feed domain

- Removed some header files for unit test sources


Release 1.5.0
23-October-2008
Changes since 1.4.0

Additions

- Services and tickets now support properties to make it easier to pass
  parameters to service callback methods.  Tickets inherit a copy of the
  properties set in the service instance.
  
- Added Google Finance, Webmaster Tools, and Google Books classes.

- Picasa Web class, method, and constant names changed to Google Photos

- Added support for contact groups and extended properties, and a method
  to generate contact feed URLs for projections.  Added methods to remove
  contact properties. (thanks stevec)  Added a service method to fetch a 
  contact entry given its URL.

- Added GDataXMLNode, a shim layer used for GDATA_IPHONE builds

- GDataObject extension mechanism now supports extensions for
  attributes as well as for elements.
  
- GDataObject base class now handles parsing, generation, copying,
  and comparison of local attributes.
  
- Added namespace utilities to GDataObject: completeNamespaces, 
  which returns a union of an objects declared namespaces with those of its